force-app/main/default/objects/Incentives__c/Incentives__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to capture Transform Accelerator Claims for the Partner &apos;Transform Program&apos; Point System. Also used to capture Channel SPIFF Claims.</description>
    <label>Incentive</label>
    <nameField>
        <label>Incentives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>