force-app/main/default/objects/Incentives__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>OR(
AND(ISNULL(End__c),
Start__c&lt;=TODAY())
,
AND(
End__c&gt;=TODAY(),
Start__c&lt;=TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>