force-app/main/default/objects/Incentives__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDM-APAC</fullName>
            </value>
            <value>
                <fullName>CDM-EMEA</fullName>
            </value>
            <value>
                <fullName>CDM-NAM</fullName>
            </value>
            <value>
                <fullName>CDM-Federal-A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>