force-app/main/default/objects/Incentives__c/fields/CCR_Type__c.field-meta.xml
<CustomField>
    <fullName>CCR_Type__c</fullName>
    <label>Incentive Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brik_Dollar_Incentive_Claim_Req</fullName>
                <label>Meeting Form</label>
            </value>
            <value>
                <fullName>North_America_and_ANZ</fullName>
                <label>Deal Registration Form</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>