force-app/main/default/objects/Incentives__c/fields/Channel_Program__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program</label>
    <referenceTo>ChannelProgram</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>