force-app/main/default/objects/Incentives__c/fields/Channel_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program Level</label>
    <referenceTo>ChannelProgramLevel</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>