force-app/main/default/objects/Incentives__c/fields/Claim_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Claim_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Visibility</label>
    <type>Checkbox</type>
</CustomField>