force-app/main/default/objects/Incentives__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
                <label>Reseller</label>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Partner - MSP</fullName>
                <label>MSP-Reseller</label>
            </value>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>