force-app/main/default/objects/Incentives__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Rebate</fullName>
            </value>
            <value>
                <fullName>Marketing SPIFF</fullName>
            </value>
            <value>
                <fullName>Channel SPIFF</fullName>
            </value>
            <value>
                <fullName>PROMO</fullName>
            </value>
            <value>
                <fullName>Ransomware Website Showcase</fullName>
            </value>
            <value>
                <fullName>Ransomware Assessment</fullName>
            </value>
            <value>
                <fullName>Ransomware Workshop</fullName>
            </value>
            <value>
                <fullName>Successful Customer Demo</fullName>
            </value>
            <value>
                <fullName>Customer Demand Generation Event</fullName>
                <isActive>false</isActive>
                <label>Customer Demand Generation Event</label>
            </value>
            <value>
                <fullName>Internal License Use</fullName>
                <isActive>false</isActive>
                <label>Internal License Use</label>
            </value>
            <value>
                <fullName>Joint Offering Promotion</fullName>
                <isActive>false</isActive>
                <label>Joint Offering Promotion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>