force-app/main/default/objects/Incentives__c/recordTypes/Incentive.recordType-meta.xml
<RecordType>
    <fullName>Incentive</fullName>
    <active>true</active>
    <label>Incentive</label>
</RecordType>