force-app/main/default/objects/Incentives__c/recordTypes/Transform_Accelerator_Claim.recordType-meta.xml
<RecordType>
    <fullName>Transform_Accelerator_Claim</fullName>
    <active>true</active>
    <label>Transform Accelerator Claim</label>
</RecordType>