force-app/main/default/objects/Incentives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>End__c</columns>
    <columns>Start__c</columns>
    <columns>Type__c</columns>
    <columns>Channel_Program_Level__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Owner_Theater__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>