force-app/main/default/objects/Incentives__c/listViews/ETM_Theatre_updates_needed.listView-meta.xml
<ListView>
    <fullName>ETM_Theatre_updates_needed</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>End__c</columns>
    <columns>Start__c</columns>
    <columns>Type__c</columns>
    <columns>Account_Owner_Theater__c</columns>
    <columns>Theatre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account_Owner_Theater__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ETM Theatre updates needed</label>
</ListView>