force-app/main/default/objects/Incentives__c/listViews/Partner_Program_Operation_Incentives.listView-meta.xml
<ListView>
    <fullName>Partner_Program_Operation_Incentives</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Channel SPIFF</value>
    </filters>
    <label>Partner Program Operation</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>